updates from running `npm install --save-dev webpack webpack-cli copy-webpack-plugin zip-webpack-plugin`

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@babel/preset-typescript": "7.13.0",
     "@types/node": "15.0.1",
     "babel-loader": "8.2.2",
-    "copy-webpack-plugin": "8.1.1",
-    "webpack": "5.36.1",
-    "webpack-cli": "4.6.0",
-    "zip-webpack-plugin": "4.0.1"
+    "copy-webpack-plugin": "^8.1.1",
+    "webpack": "^5.36.1",
+    "webpack-cli": "^4.6.0",
+    "zip-webpack-plugin": "^4.0.1"
   },
   "dependencies": {
     "express": "4.17.1"
